app/assets/stylesheets/sage/docs/_status_key.scss
/* ==================================================
  ** _status_key.scss

  For Sage documentation use
================================================== */

.status-key {
  display: flex;
  align-items: center;

  + .status-key {
    margin-left: sage-spacing();
  }

  &__wrapper {
    display: flex;
    margin-bottom: sage-spacing();
  }

  &__icon {
    display: inline-block;
    flex: 0 0 $status-key-icon-size;
    width: $status-key-icon-size;
    height: $status-key-icon-size;
    border: 2px solid sage-color(grey);
    border-radius: $status-key-icon-size;

    &--done {
      border-color: sage-color(sage);
      background: sage-color(sage);
    }

    &--doing {
      border-color: sage-color(orange);
    }

    &--todo {
      border-color: sage-color(primary);
    }

    &--no {
      background: sage-color(grey);
    }

    &--stop {
      border-color: sage-color(red);
      background: sage-color(red);
    }
  }

  &__text {
    margin-left: sage-spacing(xs);
    font-size: sage-font-size(sm);
    font-weight: sage-font-weight(semibold);
    color: sage-color(charcoal, 200);
  }
}

